# agentic-framework

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_settings_json_focused.py  test_settings_permissions.py  test_worktree_permissions.py
.claude/: settings.json
.claude/agents/: claude-configuration-dev.md  cleanup-agent-env.md  code-review-agent.md  codebase-cartographer.md  convert-to-python.md  create_worktree.md  feature_analyzer.md  meta-agent.md  pr-writer.md  python-code-reviewer.md  schema-validation-specialist.md  semantic-synthesist-reviewer.md  semantic-synthesist.md  sme_distributed-systems-pipeline-engineer.md
.claude/commands/: agent_name.md  cleanup-agent-env.md  create_worktree.md  dev-current.md  dev-new.md  dev.md  prime-memories.md  solution-architect.md
.claude/hooks/: hook_entry.py  notification.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_stop.py  user_prompt_submit.py
.claude/output-styles/: summary.md
.claude/patterns/: basic-agent_pattern.md  developer-agent_pattern.md
.claude/prompts/: developer-report-example.md  developer-report.md
.claude/ref_docs/: anthropic_tools.md
.claude/reports/: DEVELOPER_REPORT.md  feat-settings-permissions-developer-report.md
.claude/status_lines/: status_line.md  status_line.py  status_line_v2.py  status_line_v3.py  status_line_v4.py
.github/workflows/: hook-tests.yml
ai_docs/: anthropic_hooks.md
tests/: test_worktree_permissions.py
tests/feat-settings-permissions/: test_settings_json_focused.py  test_settings_permissions.py
(+287 files in other folders)
