[project]
name = "agentic-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "asyncio>=4.0.0",
    "google-auth>=2.41.1",
    "google-cloud-storage>=3.4.0",
    "google-cloud-texttospeech>=2.31.0",
    "ipykernel>=6.30.1",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "pydantic-ai-slim[anthropic,openai]>=1.0.12",
    "pydantic-settings>=2.11.0",
    "pyprojroot>=0.3.0",
    "pyttsx3>=2.99",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "typer>=0.19.2",
]
